k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gadb
  labels:
    name: gadb
    environment: production
